# PureCLIP

./: .gitignore  INSTALLATION.md  README.md  perf-improvements.md  pureclip_defaults.toml
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  update-homebrew.yml
packaging/bioconda/: meta.yaml
packaging/homebrew/: pureclip.rb
src/: CMakeLists.txt  call_sites.h  call_sites_replicates.h  density_functions.h  density_functions_crosslink.h  density_functions_crosslink_reg.h  density_functions_reg.h  hmm_1.h  omp_schedule.h  parse_alignments.h  prepro_mle.h  pureclip.cpp  result.h  types.h  util.h  version.h.in  winextract.cpp
src/cli/: cli.h  config.h
src/cmake/: Boost.cmake  SeqAn.cmake
src/io/: bed.h
src/model/: gamma.h  gamma_reg.h  hmm.h  prepro.h  ztbin.h  ztbin_reg.h
tests/: CMakeLists.txt  README.md  compare.py  generate_golden.sh  make_synthetic.py  prepare_full.sh  prepare_real.sh
tests/data/: .gitignore
tests/data/chrM/: chrM.bam  chrM.bam.bai
tests/data/synthetic/: ref.fa  ref.fa.fai  sample.bam  sample.bam.bai
tests/golden/chr21/: regions.bed  sites.bed
tests/golden/chr21/Darwin/: params.txt  regions.bed  sites.bed
tests/golden/chrM/Darwin/: params.txt  regions.bed  sites.bed
tests/golden/chrM/Linux/: params.txt  regions.bed  sites.bed
tests/golden/synthetic/Darwin/: params.txt  regions.bed  sites.bed
tests/golden/synthetic/Linux/: params.txt  regions.bed  sites.bed
tests/unit/: test_gamma.cpp
